--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
 
     <div>
-        Content goes here ...
+        Content goes here ... and here also ...
     </div>
 
     <footer>
